--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
                     <td>Nicolás Federico</td>
                     <td>Vera Yanzón</td>
                     <td>20</td>
-                    <td>nico</td>
-                    <td></td>
+                    <td>nicolasfedericovy12@gmail.com</td>
+                    <td>+54 9 261 218 1900</td>
                 </tr>
                 <tr>
                     <td>Tiago</td>
                     <td>Pinfari</td>
                     <td>21</td>
-                    <td></td>
-                    <td></td>
+                    <td>tiagopinfari@gmail.com</td>
+                    <td>+54 9 261 346 0703</td>
                 </tr>
             </tbody>
         </table>
@@ -57,7 +57,7 @@
         <li>Jugar al BasketBall</li>
         <li>Escuchar Musica</li>
     <ul>
-    <img src="/Users/octaviomarinezcirona/Desktop/FrontEnd/HTML, JS, CSS/Perfil-de-Usuario-HTML/3AE52D70-206E-4FAD-8FE4-FA75DC7839A4.JPG" alt="Octavio Martinez Cirona" width="180" height="320"><br>
+    <img src="./3AE52D70-206E-4FAD-8FE4-FA75DC7839A4.JPG" alt="Octavio Martinez Cirona" width="180" height="320"><br>
     <a href=""></a>
     <footer>
         <form action="Contacto" title="Deja tu mensaje">
