--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <li>Jugar al BasketBall</li>
         <li>Escuchar Musica</li>
     <ul>
-    <img src="./3AE52D70-206E-4FAD-8FE4-FA75DC7839A4.JPG" alt="Octavio Martinez Cirona" width="180" height="320"><br>
+    <img src="./assets/IMG_8453.jpg" alt="Octavio Martinez Cirona"width="250" height="320"><br>
     <a href=""></a>
     <footer>
         <form action="Contacto" title="Deja tu mensaje">
