--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Octavio Martinez Cirona</title>
+    <meta name="description" content="Mi nombre es Octavio Martinez Cirona, tengo 20 años y soy de Mendoza, Argentina. Actualmente estoy estudiando la carrera de Ingenieria en Sistemas de Información en la Universidad Tecnológica Nacional. Me considero una persona responsable, organizada y con muchas ganas de aprender y crecer tanto a nivel personal como profesional.">
 </head>
 <body>
     <header>
